// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Footer component matching snapshot 1`] = `
<div
  className="css-0"
  title="footer"
>
   footer 
</div>
`;

exports[`should render SignIn component matching snapshot 1`] = `
<div
  className="css-0"
  title="sign-in"
>
   signIn 
</div>
`;
